--- a/Module3/Module3A/Index.html
+++ b/Module3/Module3A/Index.html
@@ -12,5 +12,9 @@
     <h2>Hello Testers </h2>
     <script src="task6.js"></script>
 
+    <h2>Hello Testers </h2>
+    <script src="task7.js"></script>
+
+
 </body>
 </html>
