--- a/Module3/Module3A/Index.html
+++ b/Module3/Module3A/Index.html
@@ -8,12 +8,9 @@
 <body>
     <h2>Hello Testers </h2>
     <script src="task4.js"></script>
-
-    <h2>Hello Testers </h2>
     <script src="task6.js"></script>
-
-    <h2>Hello Testers </h2>
     <script src="task7.js"></script>
+    <script src="task8.js"></script>
 
 
 </body>
