--- a/Module3/Module3A/Index.html
+++ b/Module3/Module3A/Index.html
@@ -11,6 +11,7 @@
     <script src="task6.js"></script>
     <script src="task7.js"></script>
     <script src="task8.js"></script>
+    <script src="task9.js"></script>
 
 
 </body>
