--- a/Module3/Module3A/Index.html
+++ b/Module3/Module3A/Index.html
@@ -13,6 +13,7 @@
     <script src="task8.js"></script>
     <script src="task9.js"></script>
     <script src="task10.js"></script>
+    <script src="task11.js"></script>
 
 
 </body>
