--- a/Module3/Module3A/Index.html
+++ b/Module3/Module3A/Index.html
@@ -15,7 +15,7 @@
     <script src="task10.js"></script>
     <script src="task11.js"></script>
     <script src="task12.js"></script>
-
+    <script src="task13.js"></script>
 
 </body>
 </html>
