--- a/Module3/Module3A/Index.html
+++ b/Module3/Module3A/Index.html
@@ -16,6 +16,7 @@
     <script src="task11.js"></script>
     <script src="task12.js"></script>
     <script src="task13.js"></script>
+    <script src="Task14.js"></script>
 
 </body>
 </html>
