--- a/Module3/Module3A/Tasks/Index.html
+++ b/Module3/Module3A/Tasks/Index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h2>Hello Testers </h2>
+    <script src="task2.js"></script>
     <script src="task4.js"></script>
+    <script src="task5.js"></script>
     <script src="task6.js"></script>
     <script src="task7.js"></script>
     <script src="task8.js"></script>
