update coding challenge

--- a/Module3/Module3A/codingChallenge/index.html
+++ b/Module3/Module3A/codingChallenge/index.html
@@ -10,4 +10,10 @@
     <script src="coding challenge task1.js"></script>
     <script src="coding challenge task2.js"></script>
     <script src="coding challenge task3.js"></script>
-    <script src="coding challenge task4.js"></script>
+    <script src="coding Challenge task4.js"></script>
+    <script src="coding Challenge task5.js"></script>
+    <script src="coding Challenge task6.js"></script>
+    <script src="coding Challenge task7.js"></script>
+    <script src="coding Challenge task8.js"></script>
+    <script src="coding Challenge task9.js"></script>
+    <script src="coding Challenge task10.js"></script>
